force-app/main/default/objects/Business_Sector__c/Business_Sector__c.object-meta.xml
<CustomObject>
    <label>Business Sector</label>
    <nameField>
        <label>Business Sector</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Sectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>