force-app/main/default/objects/Business_Sector__c/fields/Business_Head__c.field-meta.xml
<CustomField>
    <fullName>Business_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Sectors</relationshipName>
    <type>Lookup</type>
</CustomField>