force-app/main/default/objects/Business_Sector__c/fields/ICRA_Branch__c.field-meta.xml
<CustomField>
    <fullName>ICRA_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICRA Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Business Sectors</relationshipLabel>
    <relationshipName>Business_Sectors</relationshipName>
    <type>Lookup</type>
</CustomField>