force-app/main/default/objects/Business_Sector__c/fields/OFAC_Approver__c.field-meta.xml
<CustomField>
    <fullName>OFAC_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OFAC Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Sectors2</relationshipName>
    <type>Lookup</type>
</CustomField>