force-app/main/default/objects/Business_Sector__c/fields/Opportunity_Checker__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Checker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Checker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Sectors1</relationshipName>
    <type>Lookup</type>
</CustomField>