force-app/main/default/objects/Business_Sector__c/validationRules/No_field_can_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>No_field_can_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(Business_Head__c)  ,
 ISBLANK(ICRA_Branch__c	),
 ISBLANK(OFAC_Approver__c),
 ISBLANK(Opportunity_Checker__c) 
)</errorConditionFormula>
    <errorMessage>Kindly input the data as fields within Business Sector cannot be kept blank</errorMessage>
</ValidationRule>