force-app/main/default/objects/Business_Sector__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Head__c</columns>
    <columns>ICRA_Branch__c</columns>
    <columns>Opportunity_Checker__c</columns>
    <columns>OFAC_Approver__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>